# muninn

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
src/muninn/: __init__.py  app.py  cli.py  styles.tcss
src/muninn/models/: __init__.py  message.py  room.py  task.py  team.py
src/muninn/screens/: help.py  main.py  team_select.py  waiting.py
src/muninn/services/: color_manager.py  message_store.py  team_discovery.py  watcher.py
src/muninn/widgets/: command_bar.py  message_bubble.py  message_list.py  room_sidebar.py  task_card.py
tests/: conftest.py  test_message_store.py  test_models.py  test_team_discovery.py  test_vim_keys.py  test_waiting_screen.py
tests/fixtures/: config.json
tests/fixtures/inboxes/: analyst.json  researcher.json  team-lead.json
